--- a/src/_components/_globals/utilities.sass
+++ b/src/_components/_globals/utilities.sass
@@ -1224,3 +1224,18 @@ html body input.RadInput_Empty
 		ul
 			li
 				width: 100%
+.section-title
+	font-size: 22/16 *1rem
+	color: $colorMain
+	font-weight: 600
+.zoom-out
+	overflow: hidden
+	img
+		transform: scaleX(1.1)
+		-webkit-transition: all 2s ease
+		-moz-transition: all 2s ease
+		-ms-transition: all 2s ease
+		transition: all 2s ease
+		&:hover
+			transform: scale(1)
+		
