--- a/src/_components/_layout/_layout.pug
+++ b/src/_components/_layout/_layout.pug
@@ -26,12 +26,12 @@ html(lang="en")
 				block footer
 					include _footer.pug
 			#overlay
-			#phone-call
-				a(href="tel:0931771893")
-					.phone-fixed.is-animating
+			//- #phone-call
+			//- 	a(href="tel:0931771893")
+			//- 		.phone-fixed.is-animating
 
-		#back-to-top
-			em.lnr.lnr-arrow-up
+		//- #back-to-top
+		//- 	em.lnr.lnr-arrow-up
 		script(type="text/javascript" src="./js/core.min.js")
 		script(type="text/javascript" src="./js/main.min.js")
 		block scripts
