--- a/src/_components/_globals/utilities.sass
+++ b/src/_components/_globals/utilities.sass
@@ -12,11 +12,53 @@
 // 	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
 // 	background-color: #fff
 
-body
-	overflow-x: hidden
+.kv-toggle
+	cursor: pointer
+	position: relative
+	padding: 0
+	display: flex
+	align-items: center
+	justify-content: center
+	transition: .3s all linear
+	.hamburger-button
+		position: relative
+		width: 26px
+		transition: .3s all linear
+		span
+			position: absolute
+			left: 50%
+			transform: translate(-50%, -50%)
+			width: 26px
+			height: 2px
+			background-color: $main-color
+			content: ""
+			transition: .3s all linear
+			&:first-child
+				top: -5px
 
-	&.disabled
-		overflow: hidden
+			&:last-child
+				top: 5px
+	&.active
+		transition: .3s all linear
+		.hamburger-button
+			span
+				top: 50%
+				left: 50%
+				&:first-child
+					transform: translate(-50%, -50%) rotate(45deg)
+				&:nth-child(2)
+					visibility: hidden
+					opacyti: 0
+					transition: .2s all linear
+				&:last-child
+					transform: translate(-50%, -50%) rotate(-45deg)
+	@media screen and ( min-width: 992px)
+		display: none
+	@media(max-width: 576px)
+		width: 40px
+		.hamburger-button
+		+ span
+			display: none
 #overlay
 	opacity: 0
 	visibility: hidden
@@ -58,25 +100,31 @@ body
 
 	@media (min-width: 1438px)
 		padding: 60px 0
+		padding-top: 120px
 .kv-title
 	padding-top: 0
-	margin-bottom: 19px
+	margin-bottom: 35px
 
 	p,
-	h1
-		font-size: 2.25rem
-		font-weight: bold
-		color: #333333
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6
+		font-size: 3rem
+		font-weight: 900
+		color: $red
 		text-transform: uppercase
 		text-align: center
 
 		@media(max-width: 1025px)
-			font-size: 1.625rem
+			font-size: 1.5rem
 		@media(max-width: 991.98px)
 			font-size: 1.125rem
 
 	@media screen and (max-width: 1025px)
-		margin-bottom: 20px
+		margin-bottom: 15px
 .pages
 	margin-left: auto
 	width: 100%
