--- a/src/_components/list-co-dong/index.sass
+++ b/src/_components/list-co-dong/index.sass
@@ -4,6 +4,8 @@
 	@media screen and (max-width: 1366px)
 		.container
 			max-width: 1230px!important
+	.section-title
+		font-size: 22/16 *1rem
 	.list-item
 		display: block
 		border-radius: 10px
