--- a/src/_components/_globals/utilities.sass
+++ b/src/_components/_globals/utilities.sass
@@ -1229,13 +1229,13 @@ html body input.RadInput_Empty
 	color: $colorMain
 	font-weight: 600
 .zoom-out
-	overflow: hidden
-	img
-		transform: scaleX(1.1)
-		-webkit-transition: all 2s ease
-		-moz-transition: all 2s ease
-		-ms-transition: all 2s ease
-		transition: all 2s ease
-		&:hover
-			transform: scale(1)
-		
+	.img
+		overflow: hidden
+		img
+			transform: scale(1.1)
+			transition: all ease-in-out .3s
+	&:hover
+		.img
+			img
+				transform: scale(1)
+				transition: all ease-in-out .3s
