--- a/src/_components/lien-he/index.sass
+++ b/src/_components/lien-he/index.sass
@@ -1,8 +1,8 @@
 .contact
-	@media screen and (max-width: 1366px)
+	@media screen and (min-width: 1366px)
 		.container
-			max-width: 1230px!important
-	.contact-item
+			max-width: 1260px!important
+	ul
 		padding: (30/16)*1rem (25/16)*1rem (60/16)*1rem (25/16)*1rem
 		background-color: #f6f0e6
 		border-radius: 15px
@@ -18,7 +18,7 @@
 		.section-title
 			font-size: 18/16 *1rem
 			text-transform: uppercase
-		.contact-info
+		li
 			display: flex
 			list-style-type: none
 			padding-bottom: 5px
@@ -38,4 +38,77 @@
 				&.blue
 					color: #0042b4
 					text-decoration: underline
+	iframe
+		width: 100%
+		box-shadow: 0 0px 20px -9px #a0b0c1
+		border-top-left-radius: 10px
+		border-bottom-left-radius: 10px
+		@media screen and (max-width: 991px)
+			border-radius: 15px
+			margin: 20px 0
+			height: 350px
+	.my-form
+		padding: (30/16)*1rem (40/16)*1rem (40/16)*1rem (30/16)*1rem
+		background-color: white
+		height: 100%
+		border-top-right-radius: 10px
+		border-bottom-right-radius: 10px
+		box-shadow: 0 0px 20px -9px #a0b0c1
+	input,textarea
+		font-size: 16px
+		line-height: 28px
+		color: #999999
+		background-color: #f5f5f5
+		padding: 0 30px
+		border: unset
+		border-radius: 5px
+		width: 100%
+		height: 50px
+		max-width: 530px
+		@media screen and (max-width: 991px)
+			max-width: 100%
+	textarea
+		height: 100px
+		padding-top: 15px
+	.frm-submit
+		max-width: 530px
+		display: flex
+		justify-content: flex-end
+		@media screen and (max-width: 991px)
+			max-width: 100%
+			justify-content: center
+	.submit
+		display: flex
+		align-items: center
+		position: relative
+		width: 170px
+		.material-icons
+			position: absolute
+			right: 45px
+			font-size: 18px
+			color: white
+			cursor: pointer
+		input[type="submit"]
+			font-family: $fontSub
+			font-size: 16px
+			color: white
+			width: 100%
+			background-color: $colorMain
+			border-radius: 25px
+			background-color: $colorMain
+			border: 1px solid $colorMain
+		&:hover
+			input[type="submit"]
+				background-color: white
+				color: $colorMain
+				transition: .2s ease-in-out
+			.material-icons
+				color: $colorMain!important
+				cursor: pointer
+	@media screen and (max-width: 991px)
+		.pr-0
+			padding-right: 15px!important
+		.pl-0
+			padding-left: 15px!important
+
 
