--- a/src/_components/list-co-dong/index.sass
+++ b/src/_components/list-co-dong/index.sass
@@ -1,21 +1,24 @@
 .kv-header
 	display:none!important
 .list-codong
-	@media screen and (max-width: 1366px)
+	@media screen and (mIN-width: 1366px)
 		.container
-			max-width: 1230px!important
-	.section-title
+			max-width: 1260px!important
+	.title
 		font-size: 22/16 *1rem
+		color: $colorMain
+		font-weight: 600
 	.list-item
 		display: block
 		border-radius: 10px
 		background-color: #fbf7ef
-		img
+		.img
+			width: 100%
 			border-top-left-radius: 10px
 			border-top-right-radius: 10px
-			width: 100%
-			height: 240px
-			object-fit: cover
+			img
+				width: 100%
+				object-fit: cover
 		&:hover
 			background-color: $colorMain
 			transition: .2s ease-in-out
@@ -36,12 +39,13 @@
 				font-weight: 400
 			.lnr-arrow-right
 				padding-left: 20px
-	.distance:nth-child(n+4)
-		margin-top: 30px
+	[class*="col-"]:nth-child(n+4) .list-item
+		margin-top: 30px	
 	@media screen and (max-width: 992px)
-		.distance:nth-child(n+3)
+		[class*="col-"]:nth-child(n+3) .list-item
 			margin-top: 20px
 	@media screen and (max-width: 576px)
-		.distance:nth-child(n+2)
+		[class*="col-"]:nth-child(n+2) .list-item
 			margin-top: 20px
+		
 
