--- a/src/_components/tuyen-dung-ct/index.pug
+++ b/src/_components/tuyen-dung-ct/index.pug
@@ -103,4 +103,19 @@ section.kv-section.recuirement-detail
 						a(href="#") Liên hệ nộp hồ sơ: 
 						span Ứng viên quan tâm có thể nộp hồ sơ trực tiếp tại Công ty hoặc email về địa chỉ:
 						a.link-blue(href="#") botgiatnet@netcovn.com.vn.
+				.section-btn
+					a.btn-item.btn-red(href="#") ứng tuyển ngay
+					a.btn-item.btn-blue(href="#") 
+						<i class="fas fa-download"></i>
+						span tải mẫu hồ sơ
+			.col-lg-3.col-sm-12
+				.recuirement-other
+					.recuirement-header
+						h4.title Tuyển dụng khác
+					-for(i=0;i<5;i++)
+						.recuirement-body
+							a(href="#").content Nhân viên phát triển thị
+							span.content-sub 20/07/2020
+
+
 
