--- a/src/_components/nha-dau-tu/index.pug
+++ b/src/_components/nha-dau-tu/index.pug
@@ -4,27 +4,31 @@ section.kv-section.investor
 			.col-lg-3.col-md-6.col-sm-12
 				.investor-item
 					.img
-						img(src="./assets/nha-dau-tu/1.png", alt="")
+						img(src="./assets/nha-dau-tu/1.jpg", alt="")
 					.content Hoạt động năm 1968
+					.overplay
 			.col-lg-3.col-md-6.col-sm-12
 				.investor-item
 					.img
-						img(src="./assets/nha-dau-tu/2.png", alt="")
+						img(src="./assets/nha-dau-tu/2.jpg", alt="")
 					.content Top 100 thương hiệu - Nhãn hiệu Uy tín
+					.overplay
 			.col-lg-3.col-md-6.col-sm-12
 				.investor-item
 					.img
 						img(src="./assets/nha-dau-tu/3.jpg", alt="")
 					.content 7 danh mục sản phẩm
+					.overplay
 			.col-lg-3.col-md-6.col-sm-12
 				.investor-item
 					.img
 						img(src="./assets/nha-dau-tu/4.png", alt="")
 					.content sản phẩm có ở nhiều quốc gia và châu lục
+					.overplay
 section.kv-section.investor-report
 	.container
 		.row
-			.col-md-6.col-sm-12
+			.col-lg-6.col-md-12
 				.reports
 					h2.title Báo cáo thường niên
 					-for(i=0;i<8;i++)
@@ -34,4 +38,7 @@ section.kv-section.investor-report
 					a.btn-seemore(href="#")
 						span.text xem tất cả
 						span.lnr.lnr-arrow-right
+			.col-lg-6.col-md-12
+				.img
+					img(src="./assets/nha-dau-tu/5.png", alt="")
 
