co-dong-chi-tiet

--- a/src/pages/list-co-dong.pug
+++ b/src/pages/list-co-dong.pug
@@ -1,7 +1,7 @@
 extends ../_components/_layout/_layout.pug
 
 block var
-	- let title = 'CT-CO-DONG';
+	- let title = 'DS-CO-DONG';
 	- let bodyClass = 'bg-gioithieu';
 	//- - let titlePosition = ['Trang Chu'];
 //- block banner,breadcrumb
