--- a/src/_components/nha-dau-tu/index.sass
+++ b/src/_components/nha-dau-tu/index.sass
@@ -82,6 +82,8 @@
 				font-size: 16px
 				display: block
 				font-weight: 400
+				&:hover
+					color: $colorMain
 				@media screen and ( max-width: 768px )
 					text-align: left
 		.btn-seemore
