--- a/src/_components/tuyen-dung/index.pug
+++ b/src/_components/tuyen-dung/index.pug
@@ -114,6 +114,13 @@ section.kv-section.tuyendung-3
 				a.item.detail(href="#")
 					span.title Nền văn hóa tạo cảm hứng làm việc và sáng tạo
 					span.content-2 Giá trị và sự thành công của chúng tôi phụ thuộc rất nhiều vào tính sáng tạo và sự hứng thú trong công việc của bạn. Chính vì thế chúng tôi luôn nỗ lực tạo ra một môi trường làm việc chuyên nghiệp nhưng không kém phần thân thiện và cởi mở để mỗi cá nhân có thể tự do phát huy tính sáng tạo, giải phóng được tiềm năng của bản thân từ đó tạo ra sự khác biệt.
+			.col-lg-4.col-md-6.col-sm-12
+				a.item.detail.no-pad(data-fancybox="gallery" href="youtube.com/watch?v=K_1M6k6l4is")
+					video(src="youtube.com/watch?v=K_1M6k6l4is" controls)
+					.play
+						span.material-icons play_circle_outline
+					.text 
+						span Xem thêm về văn hóa làm việc tại NETCO
 section.kv-section.tuyendung-4
 	.container
 		.kv-title
