--- a/src/_components/banner/homebanner.pug
+++ b/src/_components/banner/homebanner.pug
@@ -7,7 +7,7 @@ section.kv-banner#home-banner
                     .content
                         .container
                             .desc 60 năm kết tụ tinh hoa, sản xuất trên dây chuyền hiện đại
-                            a.btn.btn-more(href="") xem sản phẩm
+                            a.btn.btn-banner(href="") xem sản phẩm
                                 span.lnr.lnr-arrow-right
             .swiper-slide
                 .swiper-inner
@@ -15,7 +15,7 @@ section.kv-banner#home-banner
                     .content
                         .container
                             .desc Mang đến người tiêu dùng Việt những sản phẩm ưu việt nhất
-                            a.btn.btn-more(href="") xem sản phẩm
+                            a.btn.btn-banner(href="") xem sản phẩm
                                 span.lnr.lnr-arrow-right
             .swiper-slide
                 .swiper-inner.content-center
@@ -29,6 +29,5 @@ section.kv-banner#home-banner
                     .content
                         .container
                             .desc Mang đến người tiêu dùng Việt những sản phẩm ưu việt nhất
-                            a.btn.btn-more(href="") xem sản phẩm
+                            a.btn.btn-banner(href="") xem sản phẩm
                                 span.lnr.lnr-arrow-right
-        .swiper-pagination
