--- a/src/_components/banner/pages-banner.pug
+++ b/src/_components/banner/pages-banner.pug
@@ -1,8 +1,5 @@
 section#page-banner
 	.banner__pages
-		img(src="assets/banner/pagebanner.png", alt="")
+		img(src="./assets/about/b-1.png", alt="")
 		.content
-			h1.title Viên Uống DHC
-			h2.sub-title Bổ Sung Vitamin C 120 Viên
-			a.btn.btn-more(href="") Mua ngay
-				em.material-icons arrow_forward
+			h1.zone-title về chúng tôi
