--- a/src/_components/home/h-1.pug
+++ b/src/_components/home/h-1.pug
@@ -1,10 +1,12 @@
 section.kv-section.home-product(setBackground='../assets/i1-bg.png')
 	.container
-		.kv-title.animation-right
-			h1 sản phẩm
-		.desc.animation-top NETCO chọn con đường đến với người tiêu dùng bằng tấm lòng của một nhà sản xuất chân chính, luôn giữ chữ “TÍN” với khách hàng qua “CHẤT LƯỢNG & GIÁ CẢ”. NETCO là đối tác chiến lược của tập đoàn đa quốc gia nổi tiếng Unilever.
-		.row.category-list.animation-left
-			.col-lg-2
+		.section-image
+			img(src="./assets/i1-bg.png", alt="")
+		article
+			.kv-title.animation-right
+				p sản phẩm
+			.desc.animation-top NETCO chọn con đường đến với người tiêu dùng bằng tấm lòng của một nhà sản xuất chân chính, luôn giữ chữ “TÍN” với khách hàng qua “CHẤT LƯỢNG & GIÁ CẢ”. NETCO là đối tác chiến lược của tập đoàn đa quốc gia nổi tiếng Unilever.
+			.row.category-list.animation-left
 				a(href="")
 					.item
 						.img
@@ -12,7 +14,6 @@ section.kv-section.home-product(setBackground='../assets/i1-bg.png')
 						.text
 							.title sản phẩm nội địa
 							span.lnr.lnr-arrow-right
-			.col-lg-2
 				a(href="")
 					.item
 						.img
