--- a/src/_components/home/h-4.pug
+++ b/src/_components/home/h-4.pug
@@ -1,1 +1,10 @@
 section.kv-section.home-netco(setBackground='../assets/i4-bg.png')
+	.container
+		.section-image
+			img(src="./assets/i4-bg.png", alt="")
+		article
+			.kv-title.animation-left
+				p.text-left về netco
+			.desc.while.animation-right Hiện nay, NETCO có hai nhà máy, một nhà máy tại trụ sở chính ở Biên Hòa – Đồng Nai. Một nhà máy tại Hà Nội. Công suất thiết kế 150.000 tấn bột giặt và 60.000 tấn tẩy rửa lỏng/năm. Cả hai nhà máy được các chuyên gia kỹ thuật hàng đầu đánh giá cao.
+			a.btn.btn-more(href="") xem thêm
+				span.lnr.lnr-arrow-right
