--- a/src/_components/_layout/_breadcrumb.pug
+++ b/src/_components/_layout/_breadcrumb.pug
@@ -2,7 +2,6 @@
 	.container
 		ol.breadcrumb
 			li
-				a(href='index.html')
-					//- sapn.fas.fa-home
+				a(href='index.html') trang chủ
 			li.active
 				a(href='#') Danh mục cấp 1
