--- a/src/_components/_layout/header.sass
+++ b/src/_components/_layout/header.sass
@@ -6,7 +6,10 @@
 	box-shadow: 0 0 6px rgba($color: #000000, $alpha: .3)
 	transition: all .3s ease-in-out
 	.navbar
+		max-width: 1330px
+		margin: 0 auto
 		.navbar-brand
+			padding: 0
 			position: absolute
 			top: 10px
 			left: 50%
@@ -16,17 +19,19 @@
 			border-radius: 50%
 			background-color: #f5f5f5
 			margin: 0
+			transition: all ease-in-out .5s
 			img
 				width: 100%
 				height: 100%
 				object-fit: contain
-		.nav-left
-			margin-left: -50px
+			&.active
+				width: 70px
+				height: 70px
+				transition: all ease-in-out .5s
 		.nav-right
 			margin-left: auto
 		.list-icons
 			margin-left: 20px
-			margin-right: -50px
 			display: flex
 			align-items: center
 			.language,
@@ -91,7 +96,121 @@
 						color: #ffffff
 		.nav-left,
 		.nav-right
-			.nav-link
-				font-size: .9375rem
-				color: rgb(193, 0, 22)
-				font-weight: bold
+			.nav-item
+				.nav-link
+					font-size: .9375rem
+					color: rgb(193, 0, 22)
+					font-weight: bold
+	@media screen and ( max-width: 1366px)
+		.navbar
+			max-width: 100%
+	@media screen and ( max-width: 1280px)
+		.navbar
+			max-width: 100%
+			.navbar-brand
+				width: 80px
+				height: 80px
+				&.active
+					width: 70px
+					height: 70px
+			.nav-left,
+			.nav-right
+				.nav-item
+					.nav-link
+						font-size: .9rem
+	@media screen and ( max-width: 1240px)
+		.navbar
+			.nav-left,
+			.nav-right
+				.nav-item
+					.nav-link
+						font-size: .85rem
+	@media screen and ( min-width: 1199.98px)
+		.navbar
+			.main-nav
+				width: 100%
+				display: none
+	@media screen and ( max-width: 1199.98px)
+		.navbar
+			.nav-left,
+			.nav-right
+				display: none
+			.main-nav
+				width: 100%
+				display: flex
+				align-items: center
+				.navbar-brand
+					width: 70px
+					height: 70px
+					position: static
+					transform: unset
+					order: 1
+				.list-icons
+					margin-left: auto
+					margin-right: 20px
+					order: 2
+				.kv-toggle
+					order: 3
+				.nav-mobile
+					display: flex
+					flex-direction: column
+					position: absolute
+					background-color: #ffffff
+					height: calc( 100vh - 96px )
+					overflow-y: auto
+					top: 100%
+					right: -100%
+					opacity: 0
+					visibility: hidden
+					list-style: none
+					padding: 0
+					transition: all ease-in-out .5s
+					.nav-item
+						display: inline-block
+						transition: all ease-in-out .5s
+						border-bottom: solid 1px $red
+						.nav-link
+							padding: .5rem 2rem
+							font-size: .9rem
+							color: rgb(193, 0, 22)
+							font-weight: bold
+					&.active
+						opacity: 1
+						visibility: visible
+						transition: all ease-in-out .5s
+						right: 0
+						.nav-item
+							-webkit-transition: all 0.5s
+							-moz-transition: all 0.5s
+							-o-transition: all 0.5s
+							transition: all 0.5s
+							-webkit-animation-duration: 0.5s
+							animation-duration: 0.5s
+							-webkit-animation-fill-mode: both
+							animation-fill-mode: both
+							-webkit-animation-name: moveInRight
+							animation-name: moveInRight
+							&:nth-child(1)
+								animation-delay: .5s
+							&:nth-child(2)
+								animation-delay: .6s
+							&:nth-child(3)
+								animation-delay: .7s
+							&:nth-child(4)
+								animation-delay: .8s
+							&:nth-child(5)
+								animation-delay: .9s
+							&:nth-child(6)
+								animation-delay: 1s
+							&:nth-child(7)
+								animation-delay: 1.1s
+							&:nth-child(8)
+								animation-delay: 1.2s
+	@media screen and ( max-width: 767.98px)
+		.navbar
+			.main-nav
+				.navbar-brand
+					width: 50px
+					height: 50px
+
+
