--- a/src/_components/home/index.sass
+++ b/src/_components/home/index.sass
@@ -12,7 +12,7 @@
 	.category-list
 		display: flex
 		justify-content: center
-		a 
+		a
 			.item
 				position: relative
 				.img
@@ -27,7 +27,7 @@
 					transform: translate(-50%, -50%)
 					.title
 						width: 100%
-						padding: 10px
+						padding: 0 30px
 						font-size: 20px
 						color: rgb(255, 255, 255)
 						text-transform: uppercase
@@ -61,7 +61,7 @@
 			padding-top: 50px
 			padding-bottom: 30px
 			border-radius: 50%
-			background-color: $red 
+			background-color: $red
 			.title
 				font-size: 16px
 				color: rgb(255, 255, 255)
@@ -85,12 +85,29 @@
 				text-align: center
 			&:last-child
 				margin-right: 0
+	@media screen and ( max-width: 767.98px)
+		.list-item
+			.item
+				.number
+					.counter,
+					span
+						font-size: 30/16*1rem
+				&:nth-child(2)
+					margin-right: 0
+	@media screen and ( max-width: 575.98px)
+		.list-item
+			.item
+				width: 100%
+				border-radius: 0
+				margin-right: 0
+				margin-bottom: 20px
 .home-codong
 	article
 		padding-left: 75px
 		.kv-title
-			h3
+			p
 				text-align: left
+				color: #ffffff
 		.desc
 			max-width: 600px
 			font-size: 18px
@@ -109,7 +126,7 @@
 				height: 180px
 				padding: 0 13px
 				border-radius: 50%
-				background-color: $red 
+				background-color: $red
 				.title
 					font-size: 20px
 					color: rgb(255, 255, 255)
@@ -119,6 +136,328 @@
 				.lnr
 					font-size: 20px
 					color: rgb(255, 255, 255)
+		@media screen and ( max-width: 575.98px)
+			.list-item
+				.item
+					width: 100%
+					border-radius: 0
+					margin-right: 0
+					margin-bottom: 20px
+.home-netco
+	article
+		max-width: 660px
+		padding-left: 75px
+		.kv-title
+			p 
+				color: #ffffff
+		.desc
+			font-size: 18px
+			margin-bottom: 35px
+			line-height: 26px
+.home-footer
+	background-image: url('../assets/footer-bg.png')
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
+	align-items: center
+	.contact-left-col
+		padding-right: 75px
+		.footer-title
+			padding-right: 50px
+			margin-bottom: 30px
+			h1
+				font-size: 30px
+				color: rgb(255, 255, 255)
+				font-weight: bold
+				text-transform: uppercase
+				text-align: left
+		.contact-info-list
+			.item
+				.title
+					margin-bottom: 20px
+					h2
+						font-size: 18px
+						color: rgb(255, 255, 255)
+						font-weight: bold
+						text-transform: uppercase
+						text-align: left
+				ul
+					list-style: none
+					padding-left: 0
+					li
+						margin-bottom: 20px
+						display: flex
+						.material-icons
+							font-size: 18px
+							color: rgb(236, 187, 37)
+							line-height: 1.333
+							padding-right: 13px
+						.content
+							p
+								color: #ffffff
+								font-size: 15px
+	.contact-right-col
+		padding-left: 45px
+		.title
+			font-size: 30px
+			color: rgb(193, 0, 22)
+			font-weight: bold
+			text-transform: uppercase
+			text-align: left
+			margin-bottom: 30px
+		.contact-form
+			width: 100%
+			padding-bottom: 20px
+			.form-group
+				width: 50%
+				margin-bottom: 20px
+				input,
+				textarea
+					width: 100%
+					border: none
+					padding-left: 1rem
+				input
+					background-color: rgb(255, 255, 255)
+					box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.05)
+					height: 45px
+				textarea
+					background-color: rgb(255, 255, 255)
+					box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.05)
+					height: 90px
+				&:nth-child(odd)
+					padding-right: 20px
+				&.qparagraph
+					width: 100%
+					padding-right: 0
+				&.frm-btnwrap
+					.frm-btn
+						position: relative
+						background-color: rgb(193, 0, 22)
+						width: 140px
+						height: 48px
+						border-radius: 25px
+						input
+							background-color: transparent
+							color: #ffffff
+							font-size: 1rem
+							padding-right: 30px
+						.lnr
+							position: absolute
+							top: 50%
+							right: 40px
+							transform: translateY(-50%)
+							color: #ffffff
+							font-size: 18px
+					@media screen and ( max-width: 991.98px)
+						.frm-btn
+							background-color: #ffffff
+							input,
+							.lnr
+								color: $red
+				&.frm-captcha
+					width: 100%
+					align-items: center
+					display: flex
+					@media screen and ( max-width: 576px)
+						flex-direction: column
+						align-items: flex-start
+						.frm-captcha-input
+							margin-bottom: 15px
+						.frm-btnwrap
+							width: 100%
+							.frm-btn 
+								margin-left: 0
+						.RadCaptcha
+							div
+								flex-direction: unset
+					.frm-captcha-input
+						label
+							display: none
+						input
+							background-color: rgb(255, 255, 255)
+							width: 300px
+							height: 50px
+							box-shadow: 0 5px 15px 0 rgba(0,0,0,.15);
+							border: none
+							padding-left: 15px
+					.RadCaptcha
+						display: flex
+						div
+							display: flex
+							flex-direction: row-reverse
+						span 
+							display: none
+						.rcRefreshImage
+							width: 20px
+							margin: 0 13px
+							font-size: 0
+							position: relative
+							&::before
+								position: absolute
+								content: 'replay'
+								font-size: 30px
+								font-family: Material Icons
+			@media screen and ( max-width: 575.98px)
+				.form-group
+					width: 100%
+					&:nth-child(odd)
+						padding-right: 0
+		.coppy-right
+			padding-top: 30px
+			border-top: solid 1px #e5e5e5
+			.coppy
+				display: flex
+				align-items: center
+				margin-bottom: 25px
+				p 
+					font-size: 12px
+					color: #666666
+					line-height: 30px 
+				.list-footer
+					padding-left: 7px
+					a 
+						padding: 0 5px
+						font-size: 12px
+						color: #666666
+						text-decoration: underline
+						&:first-child
+							border-right: solid 1px #e5e5e5
+				@media screen and ( max-width: 991.98px)
+					p,
+					.list-footer a
+						color: #ffffff
+			.social
+				list-style: none
+				display: flex
+				align-items: center
+				padding-left: 0
+				li 
+					width: 40px
+					height: 40px
+					background-color: #ffffff
+					margin-right: 10px
+					border-radius: 50%
+					text-align: center
+					a 
+						padding: .5rem
+						line-height: 40px
+						text-align: center
+						color: $red
+						font-size: 18px
+@media screen and ( max-width: 1366px)
+	.home-product,
+	.home-xuatkhau,
+	.home-codong,
+	.home-netco
+		align-items: center
+	.home-footer
+		.contact-left-col
+			.footer-title
+				margin-bottom: 20px
+			.contact-info-list
+				max-height: 320px
+				overflow-y: auto
+				&::-webkit-scrollbar-track 
+					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+					background-color: $red
+
+				&::-webkit-scrollbar 
+					width: 5px
+					height: 5px
+					background-color: $red
+
+				&::-webkit-scrollbar-thumb 
+					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+					background-color: rgba($color: #000000, $alpha: .2)
+				.item
+					ul 
+						li
+							margin-bottom: 10px
+		.contact-right-col
+			.title
+				margin-bottom: 20px
+			.contact-form
+				padding-bottom: 0
+				.form-group
+					margin-bottom: 1rem
+			.coppy-right
+				padding-top: 10px
+				.coppy
+					margin-bottom: 10px
+@media screen and ( max-width: 1280.98px)
+	.home-footer
+		.contact-right-col
+			.coppy-right
+				.coppy
+					flex-direction: column
+				.social
+					justify-content: center
+@media screen and ( max-width: 1199.98px)
+	.home-product,
+	.home-xuatkhau,
+	.home-codong,
+	.home-netco
+		padding-top: 0
+		.section-image
+			margin-bottom: 20px
+		article
+			.kv-title
+				p 
+					color: $red
+			max-width: 100%
+			display: flex
+			flex-direction: column
+			align-items: center
+			padding: 0
+			.desc
+				max-width: 600px
+				text-align: center
+				font-size: 1rem
+				&.while
+					color: #111111
+	.home-netco
+		.btn-more
+			border: solid 1px $red
+			color: $red
+	.home-footer
+		.contact-left-col
+			.footer-title
+				padding-right: 55px
+				h1 
+					font-size: 24/16*1rem
+			padding-right: 20px
+			.contact-info-list
+				padding-right: 10px
+		.contact-right-col
+			padding: 0
+			.title
+				font-size: 24/16*1rem
+@media screen and ( max-width: 991.98px)
+	.home-footer
+		background-image: none !important
+		background-color: $red
+@media screen and ( max-width: 767.98px)
+	.home-codong
+		article
+			.list-item
+				justify-content: center
+				.item
+					&:nth-child(2),
+					&:nth-child(3)
+						margin-right: 0
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
