--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,3 +12,4 @@ block main
 		include ../_components/home/h-2.pug
 		include ../_components/home/h-3.pug
 		include ../_components/home/h-4.pug
+		include ../_components/home/h-5.pug
