--- a/src/_components/home/h-1.pug
+++ b/src/_components/home/h-1.pug
@@ -3,7 +3,7 @@ section.kv-section.home-product(setBackground='../assets/i1-bg.png')
 		.section-image
 			img(src="./assets/i1-bg.png", alt="")
 		article
-			.kv-title.animation-right
+			.kv-title.animation-right.text-uppercase
 				p sản phẩm
 			.desc.animation-top NETCO chọn con đường đến với người tiêu dùng bằng tấm lòng của một nhà sản xuất chân chính, luôn giữ chữ “TÍN” với khách hàng qua “CHẤT LƯỢNG & GIÁ CẢ”. NETCO là đối tác chiến lược của tập đoàn đa quốc gia nổi tiếng Unilever.
 			.row.category-list.animation-left
