--- a/src/_components/home/h-2.pug
+++ b/src/_components/home/h-2.pug
@@ -3,7 +3,7 @@ section.kv-section.home-xuatkhau(setBackground='../assets/i2-bg.png')
 		.section-image
 			img(src="./assets/i2-bg.png", alt="")
 		article
-			.kv-title.animation-top
+			.kv-title.animation-top.text-uppercase
 				p xuất khẩu
 			.desc.animation-right Chúng tôi sẵn sàng hợp tác với các đối tác trong và ngoài nước để sản xuất và phân phối các sản phẩm chất tẩy rửa trên cơ sở lợi ích của cả hai phía.
 			.list-item.animation-bottom
