--- a/src/_components/home/h-3.pug
+++ b/src/_components/home/h-3.pug
@@ -3,7 +3,7 @@ section.kv-section.home-codong(setBackground='../assets/i3-bg.png')
 		.section-image
 				img(src="./assets/i3-bg.png", alt="")
 		article
-			.kv-title.animation-left
+			.kv-title.animation-left.text-uppercase
 				p.text-left quan hệ cổ đông
 			.desc.while.animation-right Sản xuất và kinh doanh chất tẩy rửa không chỉ đơn thuần là công việc mà còn là niềm đam mê của NETCO. Chúng tôi tôn trọng và đánh giá cao mọi sự cộng tác chân thành của các đối tác.
 			.list-item.animation-left
