--- a/src/_components/home/index.sass
+++ b/src/_components/home/index.sass
@@ -344,6 +344,11 @@
 						text-align: center
 						color: $red
 						font-size: 18px
+.home-product,
+.home-xuatkhau,
+.home-codong,
+.home-netco
+	padding-top: 120px
 @media screen and ( max-width: 1366px)
 	.home-product,
 	.home-xuatkhau,
