--- a/src/pages/gioi-thieu.pug
+++ b/src/pages/gioi-thieu.pug
@@ -5,3 +5,11 @@ block var
 block main
 	include ../_components/banner/pages-banner.pug
 	include ../_components/_layout/_breadcrumb.pug
+	include ../_components/gioi-thieu/about-1.pug
+	include ../_components/gioi-thieu/about-2.pug
+	include ../_components/gioi-thieu/about-3.pug
+	include ../_components/gioi-thieu/about-4.pug
+	include ../_components/gioi-thieu/about-5.pug
+	include ../_components/gioi-thieu/about-6.pug
+	include ../_components/gioi-thieu/about-7.pug
+	include ../_components/gioi-thieu/about-8.pug
