--- a/src/_components/_abstracts/variables.sass
+++ b/src/_components/_abstracts/variables.sass
@@ -1,6 +1,6 @@
 $main-color:  #2e3192
 $color-text: #333333
-$red: rgb(193, 0, 22)
+$red: #c10016
 $face: #38569a
 $youtube: #f80000
 $twitter: #1c9deb
