--- a/src/_components/_layout/breadcrumb.sass
+++ b/src/_components/_layout/breadcrumb.sass
@@ -1,7 +1,5 @@
 .global-breadcrumb
-	width: 100%
-	background-color: #fefefe
-	border-bottom: solid 1px #e1e1e1
+	width: max-content
 	.breadcrumb
 		display: flex
 		align-items: center
@@ -13,33 +11,33 @@
 		li
 			position: relative
 			padding: 0 10px
-			a
-				font-size: 15px
-				color: #999999
-				@media(max-width: 991.98px)
-					font-size: 10px
-				// &.active
-				// 	color: $red
+			a,
+			span
+				color: #ffffff
+				font-size: 14/16*1rem
+				font-weight: 500
+				font-style: normal
+				letter-spacing: normal
+				line-height: 28px
+				text-align: left
+				text-transform: uppercase
+				font-style: normal
+				letter-spacing: normal
+				line-height: normal
 			&:hover
 				a
-					color: $main-color
-			&:first-child
-				padding-left: 0
-				a
-					font-weight: 700
-					span 
-						font-size: 0
+					color: $red
 
 		li+li
 			&::before
 				position: absolute
 				top: 50%
-				left: -7px
+				left: -3px
 				transform: translateY(-50%)
-				font-family: 'remixicon'
-				font-size: 18px
-				content: "\EA6E"
-				color: #999999
+				font-size: 14/16*1rem
+				content: "/"
+				color: #ffffff
+				font-weight: 500
 
 	@media(min-width: 768.98px)
 		margin-bottom: 0
