--- a/src/_components/_layout/footer.sass
+++ b/src/_components/_layout/footer.sass
@@ -1,229 +1,244 @@
 footer
-	.footer-subscribed
-		width: 100%
-		padding: 28px 0
-		background-color: #2e3192
-		.content
-			display: flex
-			align-items: center
-			.img
-				width: 65px
-				height: 60px
-				margin-right: 20px
-				img 
-					width: 100%
-			.caption
-				.title-subscribe
-					font-size: 18px
-					color: rgb(255, 255, 255)
-					font-weight: bold
-					text-transform: uppercase
-				.desc
-					font-size: 14px
-					color: rgb(255, 255, 255)
-		.subscribefrm
-			height: 100%
-			display: flex
-			align-items: center
-			.Module
-				width: 100%
+	background-image: url('../assets/footer-bg.png')
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
+	align-items: center
+	display: flex
+	padding: 80px 0
+	.contact-left-col
+		padding-right: 75px
+		.footer-title
+			padding-right: 50px
+			margin-bottom: 30px
+			h1
+				font-size: 30px
+				color: rgb(255, 255, 255)
+				font-weight: bold
+				text-transform: uppercase
+				text-align: left
+		.contact-info-list
+			.item
+				.title
+					margin-bottom: 20px
+					h2
+						font-size: 18px
+						color: rgb(255, 255, 255)
+						font-weight: bold
+						text-transform: uppercase
+						text-align: left
+				ul
+					list-style: none
+					padding-left: 0
+					li
+						margin-bottom: 20px
+						display: flex
+						.material-icons
+							font-size: 18px
+							color: rgb(236, 187, 37)
+							line-height: 1.333
+							padding-right: 13px
+						.content
+							p
+								color: #ffffff
+								font-size: 15px
+	.contact-right-col
+		padding-left: 45px
+		.title
+			font-size: 30px
+			color: rgb(193, 0, 22)
+			font-weight: bold
+			text-transform: uppercase
+			text-align: left
+			margin-bottom: 30px
+		.contact-form
+			width: 100%
+			padding-bottom: 20px
 			.form-group
-				width: 100%
+				width: 50%
+				margin-bottom: 20px
+				input,
+				textarea
+					width: 100%
+					border: none
+					padding-left: 1rem
+				input
+					background-color: rgb(255, 255, 255)
+					box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.05)
+					height: 45px
+				textarea
+					background-color: rgb(255, 255, 255)
+					box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.05)
+					height: 90px
+				&:nth-child(odd)
+					padding-right: 20px
+				&.qparagraph
+					width: 100%
+					padding-right: 0
+				&.frm-btnwrap
+					.frm-btn
+						position: relative
+						background-color: rgb(193, 0, 22)
+						width: 140px
+						height: 48px
+						border-radius: 25px
+						input
+							background-color: transparent
+							color: #ffffff
+							font-size: 1rem
+							padding-right: 30px
+						.lnr
+							position: absolute
+							top: 50%
+							right: 40px
+							transform: translateY(-50%)
+							color: #ffffff
+							font-size: 18px
+					@media screen and ( max-width: 991.98px)
+						.frm-btn
+							background-color: #ffffff
+							input,
+							.lnr
+								color: $red
+				&.frm-captcha
+					width: 100%
+					align-items: center
+					display: flex
+					@media screen and ( max-width: 576px)
+						flex-direction: column
+						align-items: flex-start
+						.frm-captcha-input
+							margin-bottom: 15px
+						.frm-btnwrap
+							width: 100%
+							.frm-btn 
+								margin-left: 0
+						.RadCaptcha
+							div
+								flex-direction: unset
+					.frm-captcha-input
+						label
+							display: none
+						input
+							background-color: rgb(255, 255, 255)
+							width: 300px
+							height: 50px
+							box-shadow: 0 5px 15px 0 rgba(0,0,0,.15);
+							border: none
+							padding-left: 15px
+					.RadCaptcha
+						display: flex
+						div
+							display: flex
+							flex-direction: row-reverse
+						span 
+							display: none
+						.rcRefreshImage
+							width: 20px
+							margin: 0 13px
+							font-size: 0
+							position: relative
+							&::before
+								position: absolute
+								content: 'replay'
+								font-size: 30px
+								font-family: Material Icons
+			@media screen and ( max-width: 575.98px)
+				.form-group
+					width: 100%
+					&:nth-child(odd)
+						padding-right: 0
+		.coppy-right
+			padding-top: 30px
+			border-top: solid 1px #e5e5e5
+			.coppy
 				display: flex
 				align-items: center
-				margin-bottom: 0
-				span
-					position: absolute
-					top: -15px
-					left: 0
-					color: $red
-					font-weight: 500
-					font-family: 'Montserrat', sans-serif
-					&::before
-						font-family: Font Awesome\ 5 Free
-				.subscribeemail
-					width: 389px
-					height: 40px
-					background-color: rgba($color: #000000, $alpha: .15)
-					border: none
-					border-radius: 20px
-					padding-left: 15px
-					margin-right: 20px
-					color: #ffffff
-					&:placeholder
-						font-size: 14px
-						color: rgb(255, 255, 255)
-				.subscribebutton
-					background-color: rgb(255, 255, 255)
-					width: 190px
-					height: 40px
-					border: none
-					border-radius: 20px
-					display: flex
-					align-items: center
-					justify-content: center
-					font-size: 15px
-					color: rgb(237, 28, 36)
-					position: relative
-					&::after
-						position: absolute
-						content: 'arrow_forward'
-						font-family: Material Icons 
-						font-size: 18px
-						right: 20%
-						top: 50%
-						transform: translateY(-50%)
-					.material-icons
-						margin-left: 10px
-					&:hover
-						color: $main-color
-		@media screen and ( max-width: 1199px)
-			.content
-				justify-content: center
-				margin-bottom: 20px
-			.subscribefrm
-				.form-group
-					justify-content: center
-		@media screen and ( max-width: 458px)
-			.subscribefrm
-				.form-group
-					flex-direction: column
-					.subscribeemail
-						width: 100%
-						margin-right: 0
-						margin-bottom: 1rem
-	.footer-container
-		padding-top: 40px
-		.footer-card
-			.footer-header
-				text-align: center
-				margin-bottom: 30px
-			.footer-body
-				text-align: center
-				.title
-					font-size: 15px
-					color: rgb(102, 102, 102)
-					font-weight: bold
-					text-transform: uppercase
-					text-align: center
-				.desc
-					font-size: 15px
+				margin-bottom: 25px
+				p 
+					font-size: 12px
 					color: #666666
-		@media screen and ( max-width: 991px)
-			.footer-card
-				.footer-header
-					margin-bottom: 10px
-				.footer-body
-					.title
-						font-size: 13px
-					.desc
+					line-height: 30px 
+				.list-footer
+					padding-left: 7px
+					a 
+						padding: 0 5px
 						font-size: 12px
-			&:nth-child(3)
-				.col-xl-3
-					&:nth-child(2)
-						border-right: none
-						border-bottom: none
-					&:nth-child(1)
-						border-bottom: none
-		@media screen and ( max-width: 767px)
-			.footer-card
-				margin-bottom: 1rem
-		&:nth-child(3)
-			padding-top: 30px
-			.col-xl-3
-				border-top: solid 1px #e1e1e1
-				border-right: solid 1px #e1e1e1
-				border-bottom: solid 1px #e1e1e1
-				.footer-card
-					padding-top: 30px
-					padding-left: 20px
-					padding-bottom: 30px
-					.footer-header
-						.title
-							font-size: 18px
-							color: $color-text
-							font-weight: bold
-							text-align: left
-							text-transform: uppercase
-							@media screen and ( max-width: 991px)
-								font-size: 13px
-					.footer-body
-						text-align: left
-						.desc
-							display: flex
-							align-items: center
-							padding-bottom: 18px
-							.material-icons
-								padding-right: 17px
-								font-size: 16px
-								color: #999999
-						ul
-							list-style: none
-							padding-left: 0
-							li 
-								padding-bottom: 10px
-								a 
-									font-size: 15px
-									color: #666666
-									@media screen and ( max-width: 991px)
-										font-size: 12px
-								&:last-child
-									padding-bottom: 0
-						.social
-							display: flex
-							margin-bottom: 20px
-							li 
-								width: 45px
-								height: 45px
-								border-radius: 50%
-								line-height: 45px
-								text-align: center
-								margin-right: 10px
-								a 
-									em 
-										color: #ffffff
-										font-size: 18px
-								&.face
-									background-color: $face
-								&.youtube
-									background-color: $youtube
-								&.twitter
-									background-color: $twitter
-				&:nth-child(1)
-					.footer-card
-						padding-left: 0
-				&:nth-child(4)
-					border-right: none
-	.coppy-right
-		padding-top: 14px
-		padding-bottom: 30px
-		.coppy,
-		.scurity
-			font-size: 14px
-			color: rgb(153, 153, 153)
-			text-align: left
-			a 
-				font-size: 14px
-				color: rgb(153, 153, 153)
-				text-align: left
-		.scurity
-			display: flex
-			justify-content: flex-end
-			a 
-				&:first-child
-					padding-right: 10px
-					border-right: solid 1px rgb(153, 153, 153)
-				&:last-child
-					padding-left: 10px
-		@media screen and ( max-width: 991px)
-			.coppy
-				text-align: center
-			.scurity
-				justify-content: center
+						color: #666666
+						text-decoration: underline
+						&:first-child
+							border-right: solid 1px #e5e5e5
+				@media screen and ( max-width: 991.98px)
+					p,
+					.list-footer a
+						color: #ffffff
+			.social
+				list-style: none
+				display: flex
+				align-items: center
+				padding-left: 0
+				li 
+					width: 40px
+					height: 40px
+					background-color: #ffffff
+					margin-right: 10px
+					border-radius: 50%
+					text-align: center
+					a 
+						padding: .5rem
+						line-height: 40px
+						text-align: center
+						color: $red
+						font-size: 18px
+	@media screen and ( max-width: 1199.98px)
+		background-image: none !important
+		background-color: $red
+		.contact-left-col
+			.footer-title
+				padding-right: 55px
+				h1 
+					font-size: 24/16*1rem
+			padding-right: 20px
+			.contact-info-list
+				padding-right: 10px
+				max-height: 320px
+				overflow-y: auto
+				&::-webkit-scrollbar-track 
+					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+					background-color: $red
 
+				&::-webkit-scrollbar 
+					width: 5px
+					height: 5px
+					background-color: $red
 
-
-
-
-
-
+				&::-webkit-scrollbar-thumb 
+					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+					background-color: rgba($color: #000000, $alpha: .2)
+				.item
+					ul 
+						li
+							margin-bottom: 10px
+		.contact-right-col
+			padding: 0
+			.title
+				font-size: 24/16*1rem
+				color: #ffffff
+			.contact-form
+				padding-bottom: 0
+				.form-group
+					margin-bottom: 1rem
+					&.frm-btnwrap
+						.frm-btn
+							background-color: #ffffff
+							input,
+							.lnr
+								color: $red
+			.coppy-right
+				.coppy
+					flex-direction: column
+					p,
+					.list-footer a
+						color: #ffffff
+				.social
+					justify-content: center
