--- a/src/_components/_layout/header.sass
+++ b/src/_components/_layout/header.sass
@@ -1,6 +1,7 @@
 .kv-header
 	position: fixed
 	width: 100%
+	height: 60px
 	z-index: 1000
 	background-color: #ffffff
 	box-shadow: 0 0 6px rgba($color: #000000, $alpha: .3)
@@ -27,6 +28,7 @@
 			&.active
 				width: 70px
 				height: 70px
+				top: 0
 				transition: all ease-in-out .5s
 		.nav-right
 			margin-left: auto
