--- a/src/_components/banner/pages-banner.pug
+++ b/src/_components/banner/pages-banner.pug
@@ -2,4 +2,5 @@ section#page-banner
 	.banner__pages
 		img(src="./assets/about/b-1.png", alt="")
 		.content
-			h1.zone-title về chúng tôi
+			.container
+				h1.zone-title về chúng tôi
