--- a/src/_components/banner/pages-banner.sass
+++ b/src/_components/banner/pages-banner.sass
@@ -1,11 +1,34 @@
-#page-banner 
+#page-banner
 	width: 100%
 	.banner__pages
 		position: relative
 		width: 100%
-		img 
+		img
 			width: 100%
 			height: 100%
 			object-fit: cover
+		.content
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			display: flex
+			align-items: center
+			.zone-title
+				color: #ffffff
+				font-size: 36/16*1rem
+				font-weight: 700
+				font-style: normal
+				letter-spacing: normal
+				line-height: 28px
+				text-align: left
+				text-transform: uppercase
+				font-style: normal
+				letter-spacing: normal
+				line-height: normal
 		@media screen and ( max-width: 1024px)
-			height: 30vh
+			height: 40vh
+			.content
+				.zone-title
+					font-size: 24/16*1rem
