--- a/src/_components/home/h-4.pug
+++ b/src/_components/home/h-4.pug
@@ -3,7 +3,7 @@ section.kv-section.home-netco(setBackground='../assets/i4-bg.png')
 		.section-image
 			img(src="./assets/i4-bg.png", alt="")
 		article
-			.kv-title.animation-left
+			.kv-title.animation-left.text-uppercase
 				p.text-left về netco
 			.desc.while.animation-right Hiện nay, NETCO có hai nhà máy, một nhà máy tại trụ sở chính ở Biên Hòa – Đồng Nai. Một nhà máy tại Hà Nội. Công suất thiết kế 150.000 tấn bột giặt và 60.000 tấn tẩy rửa lỏng/năm. Cả hai nhà máy được các chuyên gia kỹ thuật hàng đầu đánh giá cao.
 			a.btn.btn-more(href="") xem thêm
